compiler/tools/fpp-check/test/param/duplicate_id_explicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_id_explicit.fpp: 5.3
  param P2: F32 id 0x10
  ^
error: duplicate identifier value (16 dec, 10 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/param/duplicate_id_explicit.fpp: 3.3
  param P1: U32 id 0x10
  ^
